hide the weather card until a query has been made

--- a/input.css
+++ b/input.css
@@ -17,6 +17,7 @@ body {
   }
 
 #card {
+    display: none;
     background-position: 0px 0px;
     background-repeat: repeat-x;
     animation: animatedBackground 40s linear infinite alternate;
